--- a/index.html
+++ b/index.html
@@ -4,79 +4,84 @@
     <meta charset="utf-8">
     <title>Sidney Villanueva's techdegree project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    
+    <section class="total">
     <nav>
         <ul>
             <li class="name">Sidney Villanueva</li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li id="home"><a href="#">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>    
    </nav>
 
     <header>
-        <img src="images/responsive-layout-profile.png" alt="Sidney's picture">
+        <img src="images/responsive-layout-profile.png" alt="Sidney's picture" id="tag">
         <p>Hi! I'm a front-end developer who loves responsive design and css. I recenly finished a degree in front-end web development at treehouse and am excited to put all my skills to use!</p>
-
+        
     </header>
 
     <main>
+        <h1 id="portfolio">Portfolio</h1>
         <div>
-            <img src="images/portfolio-1.png" alt="Web page with blue background">
+            <img src="images/portfolio-1.png" alt="Web page with blue background" class="proto-img">
             <h2>Marketing Page</h2>
             <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
        </div>
 
        <div>
-           <img src="images/portfolio-2.png" alt="Google themed website">
+           <img src="images/portfolio-2.png" alt="Google themed website" class="proto-img">
            <h2>Search Page</h2>
            <p>This Project searches through a specific database to find information that the user is trying to look up.</p>
        </div>
 
        <div>
-           <img src="images/portfolio-3.png" alt="Travel website mock-up">
+           <img src="images/portfolio-3.png" alt="Travel website mock-up" class="proto-img">
            <h2>Travel App</h2>
            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
        </div>
 
        <div>
-           <img src="images/portfolio-4.png" alt="Map in a webpage">
+           <img src="images/portfolio-4.png" alt="Map in a webpage" class="proto-img">
            <h2>Map of Favorite Spots</h2>
            <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
        </div>
 
        <div>
-           <img src="images/portfolio-5.png" alt="Photo Gallery">
+           <img src="images/portfolio-5.png" alt="Photo Gallery" class="proto-img">
            <h2>Photo Gallery</h2>
            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
        </div>
 
        <div>
-           <img src="images/portfolio-6.png" alt="Calculator">
+           <img src="images/portfolio-6.png" alt="Calculator" class="proto-img">
            <h2>Calculator</h2>
            <p>Someone can enter in the number they want, and press the big blue button to get a result.</p>
        </div>
     </main>
 
     <footer>
-        <h2>Contact</h2>
+        <h2 id="contact">Contact</h2>
         <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
         <address>
             1600 Pennsylvania Ave <br>
             NW, Washington, DC 20500
         </address>
         <p>Email me at <a href="mailto:sijaviro@hotmail.com?subject=Let's%20get%20creative" class="email">sijaviro@hotmail.com</a></p>
-        <h3>Or reach out to me directly&colon;</h3>
+        <h4>Or reach out to me directly&colon;</h4>
         <p>Call <span class="phone">(212)123-4567</span> Mon-Fri&colon; 9am-5pm EST.</p>
+        <hr>
+        <p><strong>Sidney Villanueva</strong></p>
+        <p><a href="#home">Back to Top</a></p>
 
     </footer>
 
-
+</section>
 
 </body>
 
