--- a/index.html
+++ b/index.html
@@ -25,44 +25,45 @@
         <p>Hi! I'm a front-end developer who loves responsive design and css. I recenly finished a degree in front-end web development at treehouse and am excited to put all my skills to use!</p>
         
     </header>
-
     <main>
+        <div class="main">
         <h1 id="portfolio">Portfolio</h1>
         <div>
             <img src="images/portfolio-1.png" alt="Web page with blue background" class="proto-img">
             <h2>Marketing Page</h2>
-            <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+            <p class="main-p">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
        </div>
 
        <div>
            <img src="images/portfolio-2.png" alt="Google themed website" class="proto-img">
            <h2>Search Page</h2>
-           <p>This Project searches through a specific database to find information that the user is trying to look up.</p>
+           <p class="main-p">This Project searches through a specific database to find information that the user is trying to look up.</p>
        </div>
 
        <div>
            <img src="images/portfolio-3.png" alt="Travel website mock-up" class="proto-img">
            <h2>Travel App</h2>
-           <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+           <p class="main-p">This project compares travel times based on different transportation methods and tells you the best one.</p>
        </div>
 
        <div>
            <img src="images/portfolio-4.png" alt="Map in a webpage" class="proto-img">
            <h2>Map of Favorite Spots</h2>
-           <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+           <p class="main-p">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
        </div>
 
        <div>
            <img src="images/portfolio-5.png" alt="Photo Gallery" class="proto-img">
            <h2>Photo Gallery</h2>
-           <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+           <p class="main-p">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
        </div>
 
        <div>
            <img src="images/portfolio-6.png" alt="Calculator" class="proto-img">
            <h2>Calculator</h2>
-           <p>Someone can enter in the number they want, and press the big blue button to get a result.</p>
+           <p id="calc">Someone can enter in the number they want, and press the big blue button to get a result.</p>
        </div>
+    </div>
     </main>
 
     <footer>
@@ -77,7 +78,7 @@
         <p>Call <span class="phone">(212)123-4567</span> Mon-Fri&colon; 9am-5pm EST.</p>
         <hr>
         <p><strong>Sidney Villanueva</strong></p>
-        <p><a href="#home">Back to Top</a></p>
+        <p><a href="#home" class="back-to-top"><strong>Back to Top</strong></a></p>
 
     </footer>
 
