--- a/index.html
+++ b/index.html
@@ -22,43 +22,44 @@
 
     <header>
         <img src="images/responsive-layout-profile.png" alt="Sidney's picture" id="tag">
-        <p>Hi! I'm a front-end developer who loves responsive design and css. I recenly finished a degree in front-end web development at treehouse and am excited to put all my skills to use!</p>
+        <p id="tag-p" class="clearfix">Hi! I'm a front-end developer who loves responsive design and css. I recenly finished a degree in front-end web development at treehouse and am excited to put all my skills to use!</p>
         
     </header>
-    <main>
+    <main class="clearfix">
         <div class="main">
         <h1 id="portfolio">Portfolio</h1>
-        <div>
+        <div class="primary">
             <img src="images/portfolio-1.png" alt="Web page with blue background" class="proto-img">
             <h2>Marketing Page</h2>
             <p class="main-p">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-       </div>
+        </div>
 
-       <div>
+       <div class="primary">
            <img src="images/portfolio-2.png" alt="Google themed website" class="proto-img">
            <h2>Search Page</h2>
            <p class="main-p">This Project searches through a specific database to find information that the user is trying to look up.</p>
        </div>
-
-       <div>
+       
+    </div>
+       <div class="secondary">
            <img src="images/portfolio-3.png" alt="Travel website mock-up" class="proto-img">
            <h2>Travel App</h2>
            <p class="main-p">This project compares travel times based on different transportation methods and tells you the best one.</p>
        </div>
 
-       <div>
+       <div class="secondary">
            <img src="images/portfolio-4.png" alt="Map in a webpage" class="proto-img">
            <h2>Map of Favorite Spots</h2>
            <p class="main-p">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
        </div>
 
-       <div>
+       <div class="third">
            <img src="images/portfolio-5.png" alt="Photo Gallery" class="proto-img">
            <h2>Photo Gallery</h2>
            <p class="main-p">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
        </div>
 
-       <div>
+       <div class="third">
            <img src="images/portfolio-6.png" alt="Calculator" class="proto-img">
            <h2>Calculator</h2>
            <p id="calc">Someone can enter in the number they want, and press the big blue button to get a result.</p>
